# lllm-local-pool

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  GITHUB_READY.md  GITHUB_SETUP.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  START_HERE.md  build.rs  llm-pool.toml  setup-models.sh  test-http.sh  🌐 EPIC L — LLM Pool como Serviço (desac.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
prompts/: enrich_metadata.md  expand_queries.md  judge.md  recovery_plan.md  rerank.md
proto/vvtv/llmpool/v1/: llmpool.proto
src/: cache.rs  config.rs  ensemble.rs  errors.rs  main.rs  orchestrator.rs  telemetry.rs
src/proto/: .gitkeep
src/providers/: health.rs  mod.rs  ollama.rs
src/qos/: breaker.rs  hedge.rs  mod.rs
src/security/: hmac.rs  jwt.rs  mod.rs  ratelimit.rs
src/server/: grpc.rs  http.rs  mod.rs  router.rs
