[package]
name = "llm-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC server
tonic = "0.12"
prost = "0.13"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for providers
reqwest = { version = "0.12", features = ["json"] }

# Configuration hot-reload
notify = "6.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
prometheus = "0.13"

# Security
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = "9"
base64 = "0.22"

# Caching
moka = { version = "0.12", features = ["future"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
mockito = "1.5"
